--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#dc000000</color>
     <color name="colorPrimaryDark">#dc040a2d</color>
-    <color name="colorAccent">#cb000000</color>
+    <color name="colorAccent">#cb000536</color>
+    <!-- <color name="colorAccent">#cb000000</color>-->
     <color name="colorText">#c4dcd8b8</color>
     <color name="colorHint">#75dcd8b8</color>
 </resources>
