--- a/app/src/main/res/layout/notepad_view.xml
+++ b/app/src/main/res/layout/notepad_view.xml
@@ -28,13 +28,27 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/editText_estilo"
-        android:layout_marginTop="21dp"
         android:layout_marginEnd="25dp"
+        android:layout_marginTop="25dp"
         android:shadowColor="#ffffff"
         android:shadowRadius="3"
-        android:textSize="30sp"
-        android:textStyle="bold"
+        android:text="TextView"
         android:textColor="@color/colorAccent"
-        android:text="TextView" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="30dp"
+        android:clickable="true"
+        android:onClick="save_file"
+        app:backgroundTint="@color/colorHint2"
+        app:srcCompat="@drawable/logo_small_blue"
+        android:focusable="true" />
 
 </RelativeLayout>
