--- a/app/src/main/res/layout/notepad_view.xml
+++ b/app/src/main/res/layout/notepad_view.xml
@@ -8,13 +8,14 @@
     android:background="@drawable/sheet2">
 
     <EditText
-        android:id="@+id/editText_estilo"
+        android:id="@+id/editTextNota"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="42dp"
         android:layout_marginRight="35dp"
         android:layout_marginTop="10dp"
         android:ems="10"
+        android:text=""
         android:gravity="top"
         android:hint="Escribe aquí"
         android:layout_below="@id/notepad_title"
@@ -27,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editText_estilo"
+        android:layout_alignStart="@+id/editTextNota"
         android:layout_marginEnd="25dp"
         android:layout_marginTop="25dp"
         android:shadowColor="#ffffff"
@@ -47,7 +48,7 @@
         android:layout_marginEnd="30dp"
         android:clickable="true"
         android:onClick="save_file"
-        app:backgroundTint="@color/colorHint2"
+        app:backgroundTint="@color/colorHint3"
         app:srcCompat="@drawable/logo_small_blue"
         android:focusable="true" />
 
