--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <!-- <color name="colorAccent">#cb000000</color>-->
     <color name="colorText">#c4dcd8b8</color>
     <color name="colorHint">#75dcd8b8</color>
-    <color name="colorHint2">#000536</color>
+    <color name="colorHint2">#7a000536</color>
+    <color name="colorHint3">#000536</color>
 </resources>
