--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#dc000000</color>
     <color name="colorPrimaryDark">#dc040a2d</color>
     <color name="colorAccent">#cb000536</color>
+    <color name="colorTitle">#000536</color>
     <!-- <color name="colorAccent">#cb000000</color>-->
     <color name="colorText">#c4dcd8b8</color>
     <color name="colorHint">#75dcd8b8</color>
