--- a/app/src/main/res/layout/notepad_view.xml
+++ b/app/src/main/res/layout/notepad_view.xml
@@ -47,9 +47,9 @@
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="30dp"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="save_file"
         app:backgroundTint="@color/colorHint3"
-        app:srcCompat="@drawable/logo_small_blue"
-        android:focusable="true" />
+        app:srcCompat="@drawable/logo_small_blue" />
 
 </RelativeLayout>
