--- a/app/src/main/res/layout/dates_view.xml
+++ b/app/src/main/res/layout/dates_view.xml
@@ -24,7 +24,7 @@
         android:background="@android:color/transparent"/>-->
 
     <TextView
-        android:id="@+id/notepad_title"
+        android:id="@+id/dates_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -38,7 +38,7 @@
         android:textSize="30sp"
         android:textStyle="bold" />
 
-    <android.support.design.widget.FloatingActionButton
+    <!--<android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -50,6 +50,6 @@
         android:focusable="true"
         android:onClick="save_file"
         app:backgroundTint="@color/colorHint3"
-        app:srcCompat="@drawable/logo_small_blue" />
+        app:srcCompat="@drawable/logo_small_blue" />-->
 
 </RelativeLayout>
