--- a/app/src/main/res/layout/notepad_view.xml
+++ b/app/src/main/res/layout/notepad_view.xml
@@ -3,16 +3,46 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/sheet2">
+
+
+    <ImageView
+        android:id="@+id/fab_save_note"
+        android:layout_width="75dp"
+        android:layout_height="70dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="right|top"
+        android:layout_marginTop="-10dp"
+        android:layout_marginEnd="-4dp"
+        android:onClick="save_file"
+        android:clickable="true"
+        android:src="@drawable/save_note_icon" />
+
+    <TextView
+        android:id="@+id/notepad_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/editTextNota"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="25dp"
+        android:shadowColor="#ffffff"
+        android:shadowRadius="3"
+        android:text="TextView"
+        android:textColor="@color/colorAccent"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editTextNota"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="42dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="38dp"
         android:layout_marginTop="10dp"
         android:ems="10"
         android:text=""
@@ -23,33 +53,19 @@
         android:textColorHint="@color/colorHint2"
         android:background="@android:color/transparent"/>
 
-    <TextView
-        android:id="@+id/notepad_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editTextNota"
-        android:layout_marginEnd="25dp"
-        android:layout_marginTop="25dp"
-        android:shadowColor="#ffffff"
-        android:shadowRadius="3"
-        android:text="TextView"
-        android:textColor="@color/colorAccent"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="30dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:onClick="save_file"
-        app:backgroundTint="@color/colorHint3"
-        app:srcCompat="@drawable/logo_small_blue" />
+    <!-- <android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab_save_note"-->
+        <!--android:layout_width="70dp"-->
+        <!--android:layout_height="70dp"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_marginEnd="30dp"-->
+        <!--android:layout_marginBottom="30dp"-->
+        <!--android:clickable="true"-->
+        <!--android:layout_gravity="end|bottom"-->
+        <!--android:focusable="true"-->
+        <!--android:onClick="save_file"-->
+        <!--app:backgroundTint="@color/colorHint3"-->
+        <!--app:srcCompat="@drawable/logo_small_blue" /> -->
 
 </RelativeLayout>
