--- a/app/src/main/res/layout/dates_view.xml
+++ b/app/src/main/res/layout/dates_view.xml
@@ -8,12 +8,15 @@
     android:background="@drawable/sheet2">
 
     <ImageView
-        android:id="@+id/fab_save_note"
+        android:id="@+id/fab_save_date"
         android:layout_width="75dp"
         android:layout_height="70dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="right|top"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="save_date"
         android:layout_marginTop="-10dp"
         android:layout_marginEnd="-4dp"
         android:src="@drawable/save_note_icon" />
@@ -74,10 +77,9 @@
             android:id="@+id/date_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Fecha primer parcial"
-            android:inputType="none"
             android:focusable="false"
-            />
+            android:hint="Fecha primer parcial"
+            android:inputType="none" />
     </android.support.design.widget.TextInputLayout>
 
     <ImageButton
@@ -85,6 +87,64 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/date_label"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="11dp"
+        android:layout_marginEnd="51dp"
+        android:background="@null"
+        app:srcCompat="@drawable/ic_calendar" />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@id/date_label"
+        android:id="@+id/date_label_2">
+
+        <EditText
+            android:id="@+id/date_input_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:hint="Fecha segundo parcial"
+            android:inputType="none" />
+    </android.support.design.widget.TextInputLayout>
+
+    <ImageButton
+        android:id="@+id/btn_calendar_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/date_label_2"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="11dp"
+        android:layout_marginEnd="51dp"
+        android:background="@null"
+        app:srcCompat="@drawable/ic_calendar" />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="95dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@id/date_label_2"
+        android:id="@+id/date_label_3">
+
+        <EditText
+            android:id="@+id/date_input_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:hint="Fecha tercer parcial"
+            android:inputType="none" />
+    </android.support.design.widget.TextInputLayout>
+
+    <ImageButton
+        android:id="@+id/btn_calendar_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/date_label_3"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="11dp"
         android:layout_marginEnd="51dp"
