--- a/app/src/main/res/layout/dates_view.xml
+++ b/app/src/main/res/layout/dates_view.xml
@@ -152,7 +152,7 @@
         app:srcCompat="@drawable/ic_calendar" />
 
 
-    <!--<android.support.design.widget.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -162,8 +162,7 @@
         android:layout_marginEnd="30dp"
         android:clickable="true"
         android:focusable="true"
-        android:onClick="save_file"
         app:backgroundTint="@color/colorHint3"
-        app:srcCompat="@drawable/logo_small_blue" />-->
+        app:srcCompat="@drawable/logo_small_blue" />
 
 </RelativeLayout>
