--- a/app/src/main/res/layout/notepad_view.xml
+++ b/app/src/main/res/layout/notepad_view.xml
@@ -49,6 +49,7 @@
         android:gravity="top"
         android:hint="@string/hint_notepad"
         android:layout_below="@id/notepad_title"
+        android:inputType="textCapSentences"
         android:textColor="@android:color/black"
         android:textColorHint="@color/colorHint2"
         android:background="@android:color/transparent"/>
