--- a/app/src/main/res/layout/dates_view.xml
+++ b/app/src/main/res/layout/dates_view.xml
@@ -21,6 +21,20 @@
         android:layout_marginEnd="-4dp"
         android:src="@drawable/save_note_icon" />
 
+    <ImageView
+        android:id="@+id/fab_cancel_note"
+        android:layout_width="45dp"
+        android:layout_height="55dp"
+        android:layout_alignTop="@+id/fab_save_date"
+        android:layout_toStartOf="@+id/fab_save_date"
+        android:layout_gravity="right|top"
+        android:clickable="true"
+        android:layout_marginEnd="-10dp"
+        android:elevation="20dp"
+        android:focusable="true"
+        android:onClick="cancel"
+        android:src="@drawable/cancel_icon" />
+
     <!--<EditText
         android:id="@+id/editTextNota"
         android:layout_width="match_parent"
@@ -41,11 +55,9 @@
         android:id="@+id/dates_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="60dp"
+        android:layout_alignStart="@+id/date_label"
+        android:layout_marginTop="44dp"
         android:shadowColor="#ffffff"
         android:shadowRadius="3"
         android:text="TextView"
