--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,11 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="30dp"
-        android:layout_alignStart="@+id/editText2"
+        android:layout_alignStart="@+id/button"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="41dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_user"
         android:ems="10"
@@ -38,7 +38,7 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="30dp"
         android:layout_below="@+id/editText"
         android:layout_centerHorizontal="true"
