--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#49599a"
+    android:background="@drawable/wall_test_2"
     android:clickable="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
@@ -27,12 +27,12 @@
         android:layout_alignStart="@+id/button"
         android:layout_below="@+id/textView"
         android:layout_marginTop="41dp"
-        android:background="#11000000"
+        android:background="@color/blackHint"
         android:drawableLeft="@drawable/ic_user"
         android:ems="10"
         android:hint="Angélica"
         android:inputType="textPersonName"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorHint"
         android:textSize="16sp" />
 
@@ -43,12 +43,12 @@
         android:layout_below="@+id/editText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
-        android:background="#11000000"
+        android:background="@color/blackHint"
         android:drawableLeft="@drawable/ic_action_name"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorHint"
         android:textSize="16sp" />
 
