--- a/app/src/main/res/layout/dates_view.xml
+++ b/app/src/main/res/layout/dates_view.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:background="@drawable/sheet2">
+    android:background="@drawable/wall_test_4">
 
     <ImageView
         android:id="@+id/fab_save_date"
@@ -62,6 +62,7 @@
         android:layout_alignStart="@+id/date_label"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="63dp"
+        android:layout_marginStart="10dp"
         android:shadowColor="#ffffff"
         android:shadowRadius="3"
         android:text="TextView text text text text"
@@ -83,8 +84,8 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="185dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="218dp"
         android:layout_marginTop="25dp"
         android:layout_below="@id/dates_title"
         android:id="@+id/date_label">
@@ -94,6 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false"
+            android:text="test"
             android:hint="Fecha primer parcial"
             android:inputType="none" />
     </android.support.design.widget.TextInputLayout>
@@ -104,10 +106,29 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/date_label_2"
         android:layout_marginBottom="11dp"
-        android:layout_marginEnd="43dp"
+        android:layout_marginEnd="78dp"
         android:layout_toStartOf="@+id/fab_cancel_note"
         android:background="@null"
         app:srcCompat="@drawable/ic_calendar" />
+
+    <!-- Porcentaje primer parcial -->
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/btn_calendar"
+        android:layout_alignTop="@+id/date_label"
+        android:layout_marginStart="-70dp"
+        android:layout_marginEnd="108dp"
+        android:id="@+id/percent_1">
+
+        <EditText
+            android:id="@+id/percent_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="%"
+            android:hint="Porcentaje"
+            android:inputType="numberDecimal" />
+    </android.support.design.widget.TextInputLayout>
 
     <!-- Nota primer parcial -->
     <android.support.design.widget.TextInputLayout
@@ -115,8 +136,8 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/btn_calendar"
         android:layout_alignTop="@+id/date_label"
-        android:layout_marginStart="-10dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="25dp"
         android:id="@+id/qualification_1">
 
         <EditText
@@ -130,8 +151,8 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="185dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="218dp"
         android:layout_marginTop="15dp"
         android:layout_below="@id/date_label"
         android:id="@+id/date_label_2">
@@ -151,10 +172,29 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/date_label_3"
         android:layout_marginBottom="11dp"
-        android:layout_marginEnd="43dp"
+        android:layout_marginEnd="78dp"
         android:layout_toStartOf="@+id/fab_cancel_note"
         android:background="@null"
         app:srcCompat="@drawable/ic_calendar" />
+
+    <!-- Porcentaje segundo parcial -->
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/btn_calendar_2"
+        android:layout_alignTop="@+id/date_label_2"
+        android:layout_marginStart="-70dp"
+        android:layout_marginEnd="108dp"
+        android:id="@+id/percent_2">
+
+        <EditText
+            android:id="@+id/percent_input_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Porcentaje"
+            android:text="%"
+            android:inputType="numberDecimal" />
+    </android.support.design.widget.TextInputLayout>
 
     <!-- Nota segundo parcial -->
     <android.support.design.widget.TextInputLayout
@@ -162,8 +202,8 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/btn_calendar_2"
         android:layout_alignTop="@+id/date_label_2"
-        android:layout_marginStart="-10dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="25dp"
         android:id="@+id/qualification_2">
 
         <EditText
@@ -177,8 +217,8 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="185dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="218dp"
         android:layout_marginTop="15dp"
         android:layout_below="@id/date_label_2"
         android:id="@+id/date_label_3">
@@ -202,13 +242,31 @@
         android:background="@null"
         app:srcCompat="@drawable/ic_calendar" />
 
+    <!-- Porcentaje tercer parcial -->
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@id/percent_2"
+        android:layout_alignTop="@+id/date_label_3"
+        android:layout_marginEnd="108dp"
+        android:id="@+id/percent_3">
+
+        <EditText
+            android:id="@+id/percent_input_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Porcentaje"
+            android:text="%"
+            android:inputType="numberDecimal" />
+    </android.support.design.widget.TextInputLayout>
+
     <!-- Nota tercer parcial -->
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignStart="@id/qualification_2"
         android:layout_alignTop="@+id/date_label_3"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="25dp"
         android:id="@+id/qualification_3">
 
         <EditText
