--- a/app/src/main/res/layout/schedule_view.xml
+++ b/app/src/main/res/layout/schedule_view.xml
@@ -7,8 +7,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/wall3_small"
+        android:layout_height="wrap_content"
+        android:background="@drawable/wall_test_6"
         android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -21,10 +21,10 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView5"
             android:layout_marginStart="29dp"
-            android:background="@drawable/border"
+            android:background="@drawable/hours_border"
             android:gravity="center"
             android:text="@string/horas10"
-            android:textColor="#fff"
+            android:textColor="@color/colorTitle"
             android:textSize="12sp"
             android:textStyle="bold" />
 
@@ -46,10 +46,10 @@
             android:layout_height="54dp"
             android:layout_alignStart="@+id/textView2"
             android:layout_below="@+id/textView2"
-            android:background="@drawable/border"
+            android:background="@drawable/hours_border"
             android:gravity="center"
             android:text="@string/horas12"
-            android:textColor="#fff"
+            android:textColor="@color/colorTitle"
             android:textSize="12sp"
             android:textStyle="bold" />
 
@@ -60,10 +60,10 @@
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView2"
             android:layout_marginTop="42dp"
-            android:background="@drawable/border"
+            android:background="@drawable/hours_border"
             android:gravity="center"
             android:text="@string/horas8"
-            android:textColor="#fff"
+            android:textColor="@color/colorTitle"
             android:textSize="12sp"
             android:textStyle="bold" />
 
@@ -73,10 +73,10 @@
             android:layout_height="54dp"
             android:layout_alignStart="@+id/textView4"
             android:layout_below="@+id/textView4"
-            android:background="@drawable/border"
+            android:background="@drawable/hours_border"
             android:gravity="center"
             android:text="@string/horas2"
-            android:textColor="#fff"
+            android:textColor="@color/colorTitle"
             android:textSize="12sp"
             android:textStyle="bold" />
 
@@ -86,10 +86,10 @@
             android:layout_height="54dp"
             android:layout_alignStart="@+id/textView6"
             android:layout_below="@+id/textView6"
-            android:background="@drawable/border"
+            android:background="@drawable/hours_border"
             android:gravity="center"
             android:text="@string/horas4"
-            android:textColor="#fff"
+            android:textColor="@color/colorTitle"
             android:textSize="12sp"
             android:textStyle="bold" />
 
@@ -99,10 +99,10 @@
             android:layout_height="54dp"
             android:layout_alignStart="@+id/textView7"
             android:layout_below="@+id/textView7"
-            android:background="@drawable/border"
+            android:background="@drawable/hours_border"
             android:gravity="center"
             android:text="@string/horas6"
-            android:textColor="#fff"
+            android:textColor="@color/colorTitle"
             android:textSize="12sp"
             android:textStyle="bold" />
 
@@ -267,7 +267,7 @@
             android:background="@drawable/border"
             android:gravity="center"
             android:text=""
-            android:textColor="#fff"
+            android:textColor="@color/colorTitle"
             android:textSize="12sp"/>
 
         <TextView
@@ -281,7 +281,7 @@
             android:background="@drawable/border"
             android:gravity="center"
             android:text=""
-            android:textColor="#fff"
+            android:textColor="@color/colorTitle"
             android:textSize="12sp"/>
 
         <TextView
