--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,15 +3,17 @@
     <color name="colorPrimary">#dc000000</color>
     <color name="colorPrimaryDark">#dc040a2d</color>
     <color name="colorAccent">#cb000536</color>
+    <color name="backHours">#25003633</color>
     <color name="colorTitle">#000536</color>
     <!-- <color name="colorAccent">#cb000000</color>-->
-    <color name="colorText">#c4dcd8b8</color>
-
+    <color name="colorText">#bcfadcb0</color>
+    <color name="blackHint">#1e000000</color>
+    <color name="colorWhite">#e5ffffff</color>
     <color name="rareYellow">#fadcb0</color>
     <color name="red_1">#db0000</color>
     <color name="red_2">#f44336</color>
 
-    <color name="colorHint">#75dcd8b8</color>
+    <color name="colorHint">#6fffffff</color>
     <color name="colorHint2">#7a000536</color>
     <color name="colorHint3">#000536</color>
 </resources>
